fix todo form input overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,12 @@
   padding: 0;
 }
 
+/* usually in your global reset */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+
 html, body{
   height: 100%;
   width: 100%;
